@@ -1,3 +1,8 @@
+2010-12-20  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* shimbun.el (shimbun-beginning-of-tag, shimbun-end-of-tag): Move
+	definitions to w3m-util.el as w3m-beginning-of-tag and w3m-end-of-tag.
+
 2010-12-15  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* sb-asahi.el (shimbun-asahi-group-table): Update regexp for rss groups.
